--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "lodash": "^4.17.5",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
@@ -16,6 +17,7 @@
   },
   "devDependencies": {
     "@types/jest": "^22.0.1",
+    "@types/lodash": "^4.14.104",
     "@vue/cli-plugin-babel": "^3.0.0-beta.1",
     "@vue/cli-plugin-pwa": "^3.0.0-beta.1",
     "@vue/cli-plugin-typescript": "^3.0.0-beta.1",
